fixed text wrapping in gradient border containers and added yaml file for use with digital ocean doctl tool

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
         @apply hidden;
       }
       &__text {
-        @apply w-[90%] text-center text-gray-500 font-bold;
+        @apply w-[90%] text-center text-gray-500 font-bold whitespace-nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
       }
